# online_shop

./: .gitignore  pyproject.toml
online_shop/apps/cart/: cart.py  forms.py  views.py
online_shop/apps/orders/: admin.py  forms.py  models.py  tasks.py  views.py
online_shop/apps/orders/migrations/: 0001_initial.py
online_shop/apps/payment/: tasks.py  views.py  webhooks.py
online_shop/apps/shop/: admin.py  models.py  recommender.py  urls.py  views.py
online_shop/apps/shop/migrations/: 0001_initial.py
online_shop/online_shop/: celery.py  settings.py  urls.py
online_shop/static/assets/css/: main.css
online_shop/templates/: base.html
online_shop/templates/cart/: detail.html
online_shop/templates/orders/: create_order.html  order_created.html  pdf.html  send_mail.html
online_shop/templates/payment/: canceled.html  completed.html  process.html
online_shop/templates/shop/: index.html  product_detail.html  product_list.html
