[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Kseniia Kornilova <ksyu.kornilova2809@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
