[tool.poetry]
name = "online-shop"
version = "0.1.0"
description = ""
authors = ["Kseniia Kornilova <ksyu.kornilova2809@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psycopg2 = "^2.9.9"
django = "^4.2.0"
pillow = "^10.4.0"
django-bootstrap4 = "^24.3"
celery = "^5.4.0"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
